[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/inventar.gd" type="Script" id=1]
[ext_resource path="res://scripts/upgrades.gd" type="Script" id=2]
[ext_resource path="res://TileSet/erdblock.png" type="Texture" id=3]
[ext_resource path="res://TileSet/steinblock.png" type="Texture" id=4]
[ext_resource path="res://TileSet/Chronataphor.png" type="Texture" id=5]
[ext_resource path="res://TileSet/betamaramor.png" type="Texture" id=6]
[ext_resource path="res://TileSet/beletum.png" type="Texture" id=7]
[ext_resource path="res://TileSet/remarophos.png" type="Texture" id=8]
[ext_resource path="res://TileSet/Tizener.png" type="Texture" id=9]
[ext_resource path="res://TileSet/cobgorop.png" type="Texture" id=10]
[ext_resource path="res://TileSet/meddl.png" type="Texture" id=11]
[ext_resource path="res://textures/character/Robtron.png" type="Texture" id=12]
[ext_resource path="res://Style_panelLightGray.tres" type="StyleBox" id=13]
[ext_resource path="res://textures/normal_upgrade.png" type="Texture" id=14]
[ext_resource path="res://textures/hover_upgrade.png" type="Texture" id=15]
[ext_resource path="res://scripts/stats.gd" type="Script" id=16]

[node name="Inventory" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Upgrades" type="Node" parent="." index="0"]

script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Panel" type="Panel" parent="CanvasLayer" index="0"]

editor/display_folded = true
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 87.0
margin_top = -185.0
margin_right = 607.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Inventory" type="ItemList" parent="CanvasLayer/Panel" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -140.0
margin_right = 245.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
items = [ "Erde", ExtResource( 3 ), false, "Stein", ExtResource( 4 ), false, "Chronataphor", ExtResource( 5 ), false, "Betamaramor", ExtResource( 6 ), false, "Beletum", ExtResource( 7 ), false, "Remarophos", ExtResource( 8 ), false, "Tizener", ExtResource( 9 ), false, "Cobgorop", ExtResource( 10 ), false, "Meddl", ExtResource( 11 ), false ]
select_mode = 0
allow_reselect = true
auto_height = true
max_columns = 3
same_column_width = true
fixed_column_width = 150
icon_mode = 0
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns", "Icon", "Rect" ]

[node name="RobotronView" type="Panel" parent="CanvasLayer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 659.0
margin_top = 99.0
margin_right = 1093.0
margin_bottom = 649.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/RobotronView" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = 21.0
margin_right = 3551.0
margin_bottom = 4981.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Rect", "Theme" ]

[node name="bohrerPan" type="Panel" parent="CanvasLayer/RobotronView" index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 352.0
margin_top = 350.0
margin_right = 652.0
margin_bottom = 610.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 13 )
_sections_unfolded = [ "Anchor", "Rect", "custom_styles" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Label" type="Label" parent="CanvasLayer/RobotronView/bohrerPan" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 48.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Bohrer"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="ItemList" type="ItemList" parent="CanvasLayer/RobotronView/bohrerPan" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 22.0
margin_right = 295.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
max_columns = 2
same_column_width = true
fixed_column_width = 290
icon_mode = 1
icon_scale = 0.25
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns", "Rect" ]

[node name="jetpackPan" type="Panel" parent="CanvasLayer/RobotronView" index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 352.0
margin_top = 284.0
margin_right = 652.0
margin_bottom = 544.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 13 )
_sections_unfolded = [ "Anchor", "Rect", "custom_styles" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Label" type="Label" parent="CanvasLayer/RobotronView/jetpackPan" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 48.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Jetpack"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="ItemList" type="ItemList" parent="CanvasLayer/RobotronView/jetpackPan" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 22.0
margin_right = 295.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
max_text_lines = 2
max_columns = 2
same_column_width = true
icon_mode = 1
icon_scale = 0.18
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns", "Icon", "Rect" ]

[node name="bootPan" type="Panel" parent="CanvasLayer/RobotronView" index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 352.0
margin_top = 394.0
margin_right = 652.0
margin_bottom = 654.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 13 )
_sections_unfolded = [ "Anchor", "Rect", "custom_styles" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Label" type="Label" parent="CanvasLayer/RobotronView/bootPan" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 48.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Schuhe"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="ItemList" type="ItemList" parent="CanvasLayer/RobotronView/bootPan" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 22.0
margin_right = 295.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
max_columns = 2
same_column_width = true
fixed_column_width = 290
icon_mode = 1
icon_scale = 0.25
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns" ]

[node name="btnBohrer" type="TextureButton" parent="CanvasLayer/RobotronView" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 282.0
margin_top = 365.0
margin_right = 317.0
margin_bottom = 436.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
expand = true
_sections_unfolded = [ "Textures", "Theme" ]

[node name="btnFüße" type="TextureButton" parent="CanvasLayer/RobotronView" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 145.0
margin_top = 457.0
margin_right = 304.0
margin_bottom = 491.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="btnTorso" type="TextureButton" parent="CanvasLayer/RobotronView" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_top = 275.0
margin_right = 270.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="CheatCon" type="Panel" parent="CanvasLayer" index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -180.0
margin_right = 434.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Console" type="LineEdit" parent="CanvasLayer/CheatCon" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 56.0
margin_right = 200.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Rect" ]

[node name="ConHi" type="RichTextLabel" parent="CanvasLayer/CheatCon" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -200.0
margin_top = 10.0
margin_right = 200.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[b][color=fuchsia][u]Console v0.1 beta[/u][/color][/b]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Console v0.1 beta"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="StatsPan" type="Panel" parent="CanvasLayer" index="3"]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -243.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 281.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="CanvasLayer/StatsPan" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -34.5
margin_top = 2.0
margin_right = 34.5
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Statistiken"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/StatsPan" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 21.0
margin_right = 235.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 16 )
_sections_unfolded = [ "Rect", "Theme" ]

[connection signal="item_selected" from="CanvasLayer/RobotronView/bohrerPan/ItemList" to="Upgrades" method="_on_bohrer_item_selected"]

[connection signal="item_selected" from="CanvasLayer/RobotronView/jetpackPan/ItemList" to="Upgrades" method="_on_jetpack_item_selected"]

[connection signal="item_selected" from="CanvasLayer/RobotronView/bootPan/ItemList" to="Upgrades" method="_on_boot_item_selected"]

[connection signal="pressed" from="CanvasLayer/RobotronView/btnBohrer" to="." method="_on_btnBohrer_pressed"]

[connection signal="pressed" from="CanvasLayer/RobotronView/btnFüße" to="." method="_on_btnFuesse_pressed"]

[connection signal="pressed" from="CanvasLayer/RobotronView/btnTorso" to="." method="_on_btnTorso_pressed"]

[connection signal="text_entered" from="CanvasLayer/CheatCon/Console" to="." method="_on_Console_text_entered"]


